force-app/main/default/objects/Order__c/Order__c.object-meta.xml
<CustomObject>
    <description>A collection of menu items to be delivered by a certain date at a certain price.</description>
    <label>Food Order</label>
    <nameField>
        <label>Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Food Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>