force-app/main/default/objects/Order__c/fields/Estimated_Profit__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Profit__c</fullName>
    <description>Price to Customer minus Price to Make. The rough profit of this order.</description>
    <formula>Total_Price_to_Customer__c  -  Total_Price_to_Make__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Price to Customer minus Price to Make. The rough profit of this order.</inlineHelpText>
    <label>Estimated Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>