force-app/main/default/objects/Order__c/fields/Order_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Delivery_Date__c</fullName>
    <description>The date that the order needs to be delivered by.</description>
    <inlineHelpText>The date that the order needs to be delivered by.</inlineHelpText>
    <label>Order Delivery Date</label>
    <type>Date</type>
</CustomField>