force-app/main/default/objects/Order__c/fields/Special_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Special_Requirements__c</fullName>
    <description>Special dietary requirements for the order.</description>
    <inlineHelpText>Special dietary requirements for the order.</inlineHelpText>
    <label>Special Requirements</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>