force-app/main/default/objects/Order__c/fields/Total_Price_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_to_Customer__c</fullName>
    <description>The amount that the customer will pay for this order.</description>
    <inlineHelpText>The amount that the customer will pay for this order.</inlineHelpText>
    <label>Total Price to Customer</label>
    <summarizedField>Order_Line_Item__c.Price_to_Customer__c</summarizedField>
    <summaryForeignKey>Order_Line_Item__c.Food_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>