force-app/main/default/objects/Order__c/fields/Total_Price_to_Make__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_to_Make__c</fullName>
    <description>The amount that we will pay for ingredients / labour.</description>
    <inlineHelpText>The amount that we will pay for ingredients / labour.</inlineHelpText>
    <label>Total Price to Make</label>
    <summarizedField>Order_Line_Item__c.Price_to_Make__c</summarizedField>
    <summaryForeignKey>Order_Line_Item__c.Food_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>